# archinstaller

./: .gitignore  Cargo.toml  qemu-usb.sh  qemu.sh  test-config.yaml
.github/: build
.github/workflows/: release.yml
src/: config.rs  installer.rs  main.rs  run.rs  stages.rs  tasks.rs  utils.rs
src/installer/: boot_kernel.rs  mod.rs  post_install.rs  user_system.rs
